@@ -1,43 +1,36 @@
 package com.bidemy.model.entity;
 
 import jakarta.persistence.*;
-import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-
-@Entity
-@Table(name = "app_user")
 @Getter
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
+@Entity
+@Table(name = "app_user")
 public class User extends Auditable implements UserDetails {
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @GeneratedValue(
+            strategy = GenerationType.IDENTITY
+    )
     private Long id;
-
     private String fullName;
-
     private String email;
-
     private String password;
     private String role;
-
-    public User(@NotNull(message = "User ID is required") Long instructorId, Object o, Object o1, Object o2) {
-        super();
-    }
-
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(role));
     }
 
     @Override
@@ -45,7 +38,6 @@ public class User extends Auditable implements UserDetails {
         return email;
     }
 
-    public String getRole() {
-        return role;
-    }
+
+
 }
